# openapi.yaml
@@ -2301,6 +2301,70 @@ paths:
               schema:
                 $ref: '#/components/schemas/ForbiddenError'
           description: ''
+  /api/v2/document_merge_history/:
+    get:
+      operationId: get_created_documents_merge_history
+      summary: Get created documents merge history
+      parameters:
+      - in: header
+        name: X-Workspace
+        schema:
+          type: string
+        description: Organization unique_key
+        required: true
+      - in: query
+        name: end_date
+        schema:
+          type: string
+          format: date-time
+        description: 'DateTime in this format: 2019-05-02 16:25:12.353000'
+      - name: ordering
+        required: false
+        in: query
+        description: Which field to use when ordering the results.
+        schema:
+          type: string
+      - name: page
+        required: false
+        in: query
+        description: A page number within the paginated result set.
+        schema:
+          type: integer
+      - in: query
+        name: start_date
+        schema:
+          type: string
+          format: date-time
+        description: 'DateTime in this format: 2019-05-02 16:25:12.353000'
+      - in: query
+        name: template
+        schema:
+          type: string
+      tags:
+      - document_merge_history
+      security:
+      - OAuthAuthentication: []
+      - SessionAuthentication: []
+      - tokenAuth: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PaginatedDocumentMergeHistoryList'
+          description: ''
+        '401':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnauthenticatedError'
+          description: ''
+        '403':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ForbiddenError'
+          description: ''
   /api/v2/domain/{id}/:
     get:
       operationId: get_domain
@@ -7610,6 +7674,38 @@ components:
       - id
       - name
       - signers
+    DocumentMergeHistory:
+      type: object
+      properties:
+        id:
+          type: integer
+          readOnly: true
+        data:
+          type: object
+          additionalProperties: {}
+          nullable: true
+        template:
+          allOf:
+          - $ref: '#/components/schemas/ChildTemplate'
+          readOnly: true
+          nullable: true
+        executed_deliveries:
+          type: array
+          items:
+            $ref: '#/components/schemas/MergeHistorySerializer2'
+        is_data_expired:
+          type: string
+          readOnly: true
+        is_document_expired:
+          type: string
+          readOnly: true
+      required:
+      - executed_deliveries
+      - id
+      - is_data_expired
+      - is_document_expired
+      - template
+      description: ''
     DocumentMergeLink:
       type: object
       properties:
@@ -8482,6 +8578,30 @@ components:
       - status
       - template
       description: ''
+    MergeHistorySerializer2:
+      type: object
+      properties:
+        id:
+          type: integer
+          readOnly: true
+        delivery_type:
+          type: string
+          maxLength: 255
+        status:
+          enum:
+          - pending
+          - success
+          - error
+          type: string
+        message:
+          type: object
+          additionalProperties: {}
+          nullable: true
+      required:
+      - delivery_type
+      - id
+      - status
+      description: ''
     Meta:
       type: object
       properties:
@@ -8663,6 +8783,26 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/BulkGen'
+    PaginatedDocumentMergeHistoryList:
+      type: object
+      properties:
+        count:
+          type: integer
+          example: 123
+        next:
+          type: string
+          nullable: true
+          format: uri
+          example: http://api.example.org/accounts/?page=4
+        previous:
+          type: string
+          nullable: true
+          format: uri
+          example: http://api.example.org/accounts/?page=2
+        results:
+          type: array
+          items:
+            $ref: '#/components/schemas/DocumentMergeHistory'
     PaginatedMergeHistoryList:
       type: object
       properties:
