# src/api/index.ts
@@ -30,6 +30,7 @@ export type { CreateCustomerThreadOutput } from './models/CreateCustomerThreadOu
 export type { CSMDetails } from './models/CSMDetails';
 export type { DeleteCurrentWorkspace } from './models/DeleteCurrentWorkspace';
 export type { DeliveryAccount } from './models/DeliveryAccount';
+export type { DocumentMergeHistory } from './models/DocumentMergeHistory';
 export type { DocumentMergeLink } from './models/DocumentMergeLink';
 export type { DocuSignDelivery } from './models/DocuSignDelivery';
 export type { Domain } from './models/Domain';
@@ -57,6 +58,7 @@ export type { HostedPage } from './models/HostedPage';
 export type { InitiateAuthorizationSequence } from './models/InitiateAuthorizationSequence';
 export type { Invitation } from './models/Invitation';
 export type { MergeHistory } from './models/MergeHistory';
+export type { MergeHistorySerializer2 } from './models/MergeHistorySerializer2';
 export type { Meta } from './models/Meta';
 export type { MoveTemplate } from './models/MoveTemplate';
 export type { NewTemplate } from './models/NewTemplate';
@@ -66,6 +68,7 @@ export type { NpsRating } from './models/NpsRating';
 export type { OneDriveDelivery } from './models/OneDriveDelivery';
 export type { PaginatedAccountDeliveryList } from './models/PaginatedAccountDeliveryList';
 export type { PaginatedBulkGenList } from './models/PaginatedBulkGenList';
+export type { PaginatedDocumentMergeHistoryList } from './models/PaginatedDocumentMergeHistoryList';
 export type { PaginatedMergeHistoryList } from './models/PaginatedMergeHistoryList';
 export type { PaginatedTemplateList } from './models/PaginatedTemplateList';
 export type { PatchedDomain } from './models/PatchedDomain';
@@ -120,6 +123,7 @@ export { AiService } from './services/AiService';
 export { AiChatService } from './services/AiChatService';
 export { AppendService } from './services/AppendService';
 export { AuthTokensService } from './services/AuthTokensService';
+export { DocumentMergeHistoryService } from './services/DocumentMergeHistoryService';
 export { DomainService } from './services/DomainService';
 export { FoldersService } from './services/FoldersService';
 export { GalleryTemplatesService } from './services/GalleryTemplatesService';
